--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ links:
     URL: https://x.com
     Username: harsh98trivedi
     Color: '#1DA1F2'
-    Icon-Class: fab fa-bullhorn
+    Icon-Class: fab fa-newspaper-o
 
    
 # YOU CAN REMOVE FOOTER COMPLETELY BY SIMPLY REMOVING EITHER THE YES OR REMOVING THE FOOTER STATEMENT BELOW COMPLETELY
