--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ links:
 
     # TWITTER
   - Name: Anuncie conosco
-    URL: https://x.com
-    Username: harsh98trivedi
+    URL: https://tvriogrande.github.io
+    Username: portfolio/
     Color: '#1DA1F2'
     Icon-Class: fab fa-newspaper-o
 
