--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,13 @@ links:
     Color: '#DD2A7B'
     Icon-Class: fab fa-instagram
 
+     # YOUTUBE
+  - Name: YouTube
+    URL: https://www.youtube.com/@TVRIOGRANDE
+    Username: 
+    Color: '#DD2A7B'
+    Icon-Class: fab fa-youtube
+
     # TWITTER
   - Name: Anuncie conosco
     URL: https://tvriogrande.github.io
