--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ links:
   - Name: YouTube
     URL: https://www.youtube.com/@TVRIOGRANDE
     Username: 
-    Color: '#DD2A7B'
-    Icon-Class: fab fa-youtube
+    Color: '#FF0000'
+    Icon-Class: fa fa-youtube-play
 
     # TWITTER
   - Name: Anuncie conosco
