--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: TV RIO GRANDE
 
 # YOUR BRAND/PERSONAL TAGLINE
-tagline: A TV do seu CORAÇÃO 💓
+tagline: SUA FONTE DE NOTÍCIAS CONFIÁVEIS E MARKETING ESTRATÉGICO PARA IMPULSIONAR SEU SUCESSO!
 
 # YOUR/BRAND IMAGE URL
 Image_URL: https://telegra.ph/file/759e25074fd4bd7a5fca1.jpg
