--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 name: TV RIO GRANDE
 
 # YOUR BRAND/PERSONAL TAGLINE
-tagline: SUA FONTE DE NOTÍCIAS CONFIÁVEIS E MARKETING ESTRATÉGICO PARA IMPULSIONAR SEU SUCESSO!
+tagline: 🔥 SUA FONTE DE NOTÍCIAS CONFIÁVEIS E MARKETING ESTRATÉGICO PARA IMPULSIONAR SEU SUCESSO! 🚀💼
+
 
 # YOUR/BRAND IMAGE URL
 Image_URL: https://telegra.ph/file/53a21c1feb4ef09b8d22a.jpg
