--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,9 @@ Cover_Image: https://picsum.photos/1080?nocache=
 links:
 
   # IF YOU DON'T WANT TO USE ANY OF THE FOLLOWING, JUST LEAVE THE URL BLANK
-
-- Name: Anuncie conosco
+    #anuncie 
+    
+  - Name: Anuncie conosco
     URL: https://tvriogrande.github.io
     Username: portfolio/
     Color: '#1DA1F2'
